# medical_research_ai

./: .gitignore  README.md  crew.jsonc  evidence_crew.jsonc  pyproject.toml  test_engine.py
Outputs/csv/: papers.csv  test_results.csv
Outputs/json/: papers.json  test_results.json
Outputs/markdown/: papers.md  test_results.md
agents/: evidence_extraction_spec.jsonc  medical_literature_search_spec.jsonc
config/: llm_config.py
database/: __init__.py  database.py  research_library.db
frontend/: app.py  crew_runner.py
models/: __init__.py  evidence.py  paper.py
services/: base_client.py  crossref_client.py  europepmc_client.py  evidence_extractor.py  literature_engine.py  openalex_client.py  pubmed_client.py  pubmed_parser.py
services/llm/: base_provider.py  gemini_provider.py  llm_service.py  openai_provider.py
tests/: extract_all_papers.py  test_crewai_evidence_extraction.py  test_database_evidence.py  test_engine.py  test_evidence_extraction.py  test_pubmed.py  test_search.py
tools/: evidence_extraction_tool.py  literature_search_tool.py
utils/: exporters.py  logger.py
