[project]
name = "medical_research_ai"
version = "0.1.0"
description = "medical_research_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.1,<2.0.0",
    "biopython>=1.84",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "google-genai>=1.25.0",
    "openai>=1.40.0",
    "pydantic>=2.8",
    "requests>=2.31",
    "streamlit>=1.35"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agents", "crew.jsonc", "tools", "knowledge", "skills"]

[tool.crewai]
type = "crew"
definition = "crew.jsonc"
